fix errors with h4 and empty alt and the view on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ h4, h5, h6 {
     font-family: "Poppins", serif;
     font-weight: 700
 }
+p {
+    font-size: 1rem;
+    line-height: 1.4
+}
 ul {
     list-style: none
 }
@@ -85,8 +89,18 @@ picture img {
     padding: 2rem;
     padding-bottom: var(--Padding-b)
 }
+@media (min-width: 62rem) {
+    .header {
+        padding: 4rem;
+    }
+}
 .header .logo img {
-    width: 10rem
+    width: 6.25rem
+}
+@media (min-width: 62rem) {
+    .header .logo img {
+        width: 12rem
+    }
 }
 .header a {
     color: var(--Light-Pink);
@@ -94,7 +108,13 @@ picture img {
     border-radius: 1rem;
     padding: .3125rem .9375rem;
     transition: var(--Delay-button);
-    font-weight: 600
+    font-weight: 600;
+    font-size: .75rem
+}
+@media (min-width: 62rem) {
+    .header a {
+        font-size: 1rem
+    }
 }
 .header a:hover {
     color: var(--Very-Pale-Blue);
@@ -108,22 +128,21 @@ picture img {
     display: grid;
     place-items: center;
     text-align: center;
-    max-width: 80%;
-    margin: 0 auto
+    margin: 0 auto;
+    padding: 0 30px
 }
 .page_info_container .page_info {
     color: var(--Very-Dark-Cyan);
 }
 .page_info_container .page_info h2 {
-    font-size: 2rem;
+    font-size: 1.75rem;
     margin-bottom: 1rem
 }
-.page_info_container .page_info p {
-    font-size: 1rem
-}
 @media (min-width: 62rem) {
+    .page_info_container .page_info h2 {
+        font-size: 2rem;
+    }
     .page_info_container .page_info p {
-        font-size: 1rem;
         width: 50%;
         margin: 0 auto
     }
@@ -132,7 +151,7 @@ picture img {
     margin: 0 auto
 }
 .page_info_container .stat .box {
-    padding: 4rem
+    padding: 4rem 1rem
 }
 .page_info_container .stat .box span {
     display: block
@@ -159,7 +178,7 @@ picture img {
     flex-direction:column-reverse;
     text-align: center;
     color: var(--Very-Dark-Cyan);
-    padding: 5rem
+    padding: 2rem
 }
 @media (min-width: 62rem) {
     .about_us_container .about_us .content {
@@ -187,7 +206,6 @@ picture img {
     margin-bottom: 1rem
 }
 .about_us_container .about_us .text p {
-    font-size: 1.3rem;
     margin: 0 auto
 }
 /* End about us */
@@ -195,7 +213,8 @@ picture img {
 .build_community_container {
     display: grid;
     place-items: center;
-    margin: 30px auto
+    margin: 30px auto;
+    text-align: center
 }
 .build_community_container h2 {
     margin-bottom: -1.25rem
@@ -228,13 +247,9 @@ picture img {
         padding: 0 7rem 2rem
     }
 }
-.footer .box_container .box h4 {
-    text-transform: uppercase
-}
-@media (min-width: 62rem) {
-    .footer .box_container .box h4 {
-        font-size: 1.75rem;
-    }
+.footer .box_container .box h3 {
+    text-transform: uppercase;
+    font-size: 1.75rem
 }
 .footer .box_container .box p {
     font-size: .75rem;
@@ -252,11 +267,20 @@ picture img {
     display: flex;
     flex-direction: column
 }
+@media (min-width: 28.125rem) {
+    .footer .box_container .box form {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1.25rem
+    }
+}
 @media (min-width: 62rem) {
     .footer .box_container .box form {
         display: flex;
         flex-direction: row;
-        gap: 1.25rem
+        gap: 1.25rem;
+        justify-content: flex-start
     }
 }
 .footer .box_container .box input[type="email"] {
@@ -265,6 +289,11 @@ picture img {
     border: none;
     border-radius: 5px;
     padding: 0.625rem 1rem;
+}
+@media (min-width: 28.125rem) {
+    .footer .box_container .box input[type="email"] {
+        padding: 0.625rem 4rem;
+    }
 }
 .footer .box_container .box input[type="submit"] {
     align-self: flex-end;
@@ -278,6 +307,12 @@ picture img {
     color: var(--Very-Pale-Blue);
     cursor: pointer
 }
+@media (min-width: 28.125rem) {
+    .footer .box_container .box input[type="submit"] {
+        margin-top: 1rem;
+        margin: 0
+    }
+}
 @media (min-width: 62rem) {
     .footer .box_container .box input[type="submit"] {
         margin-top: 1rem;
@@ -288,7 +323,8 @@ picture img {
     background-color: var(--Light-Pink)
 }
 .footer .box_container .box img {
-    filter: brightness(0) invert(1)
+    filter: brightness(0) invert(1);
+    width: 12rem
 }
 .footer .box_container .box .contact li {
     margin-bottom: 15px;
